# f1tenth_stack

./: .gitignore  README.md
Simulation/: default.rviz
Simulation/f1tenth-gym-quickstart/: NewAttributes.py
Simulation/f1tenth-gym-quickstart/src/: .~lock.drive_data.csv#  .~lock.prediction_data.csv#  NewAttributes.py  NewAttributes.py.save  NewAttributes.py.save.1  NewSim.py  NewerSim.py  OldAttributes.py  OldSim.py  csv_to_node.py  simulator.py  simulator.py.save  trainy.py  waypoint_driver.py
Simulation/f1tenth-gym-quickstart/src/maps/: checkIMG.PY
race_car_ws/: NewAttributes.py  PullLidar.py  Zed_Camera.py  controller.py  drive.py  final.py  fixed_speed.py  joystick.py
race_car_ws/controller_test/: pure.py
race_car_ws/controller_test/vesccontroller/: CMakeLists.txt  package.xml
race_car_ws/controller_test/vesccontroller/src/: vesc_node.cpp
race_car_ws/f1tenth_ws/src/gap_follow/: setup.py
race_car_ws/f1tenth_ws/src/gap_follow/launch/: lidar.launch.py
race_car_ws/f1tenth_ws/src/particle_filter/launch/: localize_launch.py
race_car_ws/f1tenth_ws/src/particle_filter/particle_filter/: particle_filter.py
race_car_ws/f1tenth_ws/src/particle_filter/waypoints/: test.py
race_car_ws/f1tenth_ws/src/pure_pursuit/launch/: pure_pursuit_launch.py
race_car_ws/f1tenth_ws/src/waypoint_generator/src/: waypoint_generator.cpp
race_car_ws/pc_to_og/: README.md
race_car_ws/pc_to_og/pc_to_og_node/: CMakeLists.txt  package.xml
race_car_ws/pc_to_og/pc_to_og_node/include/pc_to_og_node/: pc_to_og.hpp
race_car_ws/pc_to_og/pc_to_og_node/launch/: launcher.launch.py
race_car_ws/pc_to_og/pc_to_og_node/src/: pc_to_og.cpp
race_car_ws/rc_pure_pursuit/: waypoint_publisher.py
race_car_ws/rc_pure_pursuit/race_car_controller/: CMakeLists.txt  package.xml
race_car_ws/rc_pure_pursuit/race_car_controller/include/race_car_controller/: race_car_controller.hpp
race_car_ws/rc_pure_pursuit/race_car_controller/launch/: launcher.launch.py
race_car_ws/rc_pure_pursuit/race_car_controller/src/: race_car_controller.cpp
race_car_ws/src/: zed-ros2-interfaces  zed-ros2-wrapper
race_car_ws/vesc/vesc_driver/: CMakeLists.txt
race_car_ws/vesc/vesc_driver/launch/: vesc_driver_node.launch.py
race_car_ws/vesc/vesc_driver/scripts/: controller.py
race_car_ws/ydlidar_ros2_driver/: CMakeLists.txt  package.xml
race_car_ws/ydlidar_ros2_driver/config/: cartographer_2d.lua  ydlidar.rviz
race_car_ws/ydlidar_ros2_driver/launch/: map_with_slam_toolbox.launch.py  mapping.launch.py  ydlidar_launch.py
race_car_ws/ydlidar_ros2_driver/src/: pointcloudpub.cpp
ros2_ws/NNMap/ai-car-simulation/: newcar.py
ros2_ws/src/csv_path_follower/: package.xml  setup.cfg  setup.py
ros2_ws/src/csv_path_follower/csv_path_follower/: csv_to_node.py
